--- a/WebApplication1/Views/AccountDatas/Edit.cshtml
+++ b/WebApplication1/Views/AccountDatas/Edit.cshtml
@@ -1,12 +1,42 @@
 ﻿@model WebApplication1.Models.AccountData
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    //  Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "編輯帳號";
+    ViewBag.role = Session["Role_ID"];
+
+}
+@{
+    if (ViewBag.role == 1)
+    {
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
+
+    else if (ViewBag.role == 2)
+    {
+        Layout = "~/Views/Shared/_Layout - manager.cshtml";
+    }
+
+    else
+    {
+        Layout = "~/Views/Shared/_Layout - player.cshtml";
+    }
 
 }
 
-<!DOCTYPE html>
+
+@{
+    if (ViewBag.role == null)
+    {
+        // 權限是空值，跳轉到登錄頁
+        <script>
+            alert("你無使用權限，媽德給我去登錄吧")
+            location.href = "/Login/Index";
+        </script>
+
+    }
+}
+
 
 <html>
 <head>
@@ -28,107 +58,107 @@
         }
     </style>
 </head>
-        <meta name="viewport" content="width=device-width" />
-   
-        <main class="main" id="main">
+<meta name="viewport" content="width=device-width" />
 
-            <div class="pagetitle">
-                <h1>編輯帳號 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>使用者編輯一筆帳號。</span></h1>
+<main class="main" id="main">
 
-            </div>
-            <div class="card" id="card">
-                <div id="card-body">
+    <div class="pagetitle">
+        <h1>編輯帳號 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>使用者編輯一筆帳號。</span></h1>
 
-                    @using (Html.BeginForm())
-                    {
-                        @Html.AntiForgeryToken()
+    </div>
+    <div class="card" id="card">
+        <div id="card-body">
 
-                    <div class="form-horizontal">
-                        <div class="form-group">
-                            <button class="btn btn-success" onclick="history.go(-1)"><i class="ri-delete-back-2-fill"></i> 返回</button>
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-horizontal">
+                    <div class="form-group">
+                        <button class="btn btn-success" onclick="history.go(-1)"><i class="ri-delete-back-2-fill"></i> 返回</button>
 
 
-                            <hr />
-
-                        </div>
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        <div class="form-horizontal">
-                           
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            @Html.HiddenFor(model => model.ID)
-
-                            <div class="form-group">
-
-                                <div class="col-md-5">
-                                    帳號:
-                                    @Html.EditorFor(model => model.Account, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Account, "", new { @class = "text-danger" })
-                                </div>
-                                
-                            </div>
-
-                            <div class="form-group">
-                                <div class="col-md-5">
-                                    使用者名稱：
-                                    @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
-                                </div>
-                                
-                            </div>
-
-                            <div class="form-group">
-                                密碼：
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                電子信箱：
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.E_mail, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.E_mail, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                 電話：
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                帳號權限：（*此功能僅開放<b>最高權限管理者</b>使用*）
-                                <div class="col-md-10">
-                                    @Html.DropDownList("Role_ID", null, htmlAttributes: new { @class = "form-select" })
-                                    @Html.ValidationMessageFor(model => model.Role_ID, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                帳號狀態：
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.Static, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.Static, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                            建立日期：                               
-                                <div class="col-md-10">
-                                    @Html.EditorFor(model => model.Creat, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                                    @Html.ValidationMessageFor(model => model.Creat, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            
-                            <input type="submit" value="送出" class="btn btn-success" />
-                        </div>
-                        
+                        <hr />
 
                     </div>
-                    }
-          </main>
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-horizontal">
+
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.HiddenFor(model => model.ID)
+
+                        <div class="form-group">
+
+                            <div class="col-md-5">
+                                帳號:
+                                @Html.EditorFor(model => model.Account, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Account, "", new { @class = "text-danger" })
+                            </div>
+
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-md-5">
+                                使用者名稱：
+                                @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
+                            </div>
+
+                        </div>
+
+                        <div class="form-group">
+                            密碼：
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            電子信箱：
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.E_mail, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.E_mail, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            電話：
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            帳號權限：（*此功能僅開放<b>最高權限管理者</b>使用*）
+                            <div class="col-md-10">
+                                @Html.DropDownList("Role_ID", null, htmlAttributes: new { @class = "form-select" })
+                                @Html.ValidationMessageFor(model => model.Role_ID, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            帳號狀態：
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Static, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Static, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            建立日期：
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Creat, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                                @Html.ValidationMessageFor(model => model.Creat, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+
+                        <input type="submit" value="送出" class="btn btn-success" />
+                    </div>
+
+
+                </div>
+            }
+</main>
