--- a/WebApplication1/Views/Login/Index.cshtml
+++ b/WebApplication1/Views/Login/Index.cshtml
@@ -150,6 +150,7 @@
                     @Html.ValidationSummary(true, "", new { @class = "error" })
                     <button class="btn btn-primary">Login</button>
                     <label>系統設計 : 莊柏軒、林亞諾 <br /> 系統測試 : 李柏慶、張慶億</label>
+                    <label>現在時間：@DateTime.Now.ToString()</label>
                 </div>                   
 
             </div>
