--- a/WebApplication1/Views/Shared/_Layout - manager.cshtml
+++ b/WebApplication1/Views/Shared/_Layout - manager.cshtml
@@ -108,14 +108,14 @@
             <li class="nav-heading">系統功能</li>
             <!-- ======= 最新公告 ======= -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="~/NewsManager">
+                <a class="nav-link collapsed" href="~/News">
                     <i class="ri-bank-fill"></i>
                     <span>最新公告</span>
                 </a>
             </li>
             <!-- ======= 帳號管理 ======= -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#">
+                <a class="nav-link collapsed" href="~/AccountDatas">
                     <i class="ri ri-database-2-fill"></i>
                     <span>帳號管理</span>
                 </a>
