--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
 
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                         <li class="dropdown-header">
-                            <div>@ViewBag.Name</div>
+                            <h6>@ViewBag.Name</h6>
                             <span>系統管理者</span>
                         </li>
                         <li>
