--- a/WebApplication1/Views/AccountDatas/Create.cshtml
+++ b/WebApplication1/Views/AccountDatas/Create.cshtml
@@ -49,106 +49,118 @@
             {
                 @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                
+                <div class="form-horizontal">
 
 
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    表單申請單號(系統自動帶入):
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.ID, new { htmlAttributes = new { @class = "form-control", Value = ViewBag.ID, @readonly = "readonly" } })
-                        @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
+
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        表單申請單號(系統自動帶入):
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.ID, new { htmlAttributes = new { @class = "form-control", Value = ViewBag.ID, @readonly = "readonly" } })
+                            @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    帳號:
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Account, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Account, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        帳號:
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Account, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Account, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    使用者名稱:
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        使用者名稱:
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    密碼:
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        <div class="row">
+
+                            <div class="col-md-5">
+                                密碼:
+                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                            </div>
+                            @*<div class="col-md-5">
+                                請再輸入一次密碼:
+                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                                
+                            </div>*@
+
+
+                        </div>
+
                     </div>
-                </div>
 
 
-                <div class="form-group">
-                    電子信箱:
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.E_mail, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.E_mail, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        電子信箱:
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.E_mail, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.E_mail, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    手機號碼:
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        手機號碼:
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    用戶權限選擇:
-                    <div class="col-md-10">
-                        @Html.DropDownList("Role_ID", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.Role_ID, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        用戶權限選擇:
+                        <div class="col-md-10">
+                            @Html.DropDownList("Role_ID", null, htmlAttributes: new { @class = "form-select" })
+                            @Html.ValidationMessageFor(model => model.Role_ID, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    帳號狀態:
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Static, new { htmlAttributes = new { @class = "form-control", Value = "Y" } })
-                        @Html.ValidationMessageFor(model => model.Static, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        帳號狀態:
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Static, new { htmlAttributes = new { @class = "form-control", Value = "Y" } })
+                            @Html.ValidationMessageFor(model => model.Static, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    創建日期:
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Creat, new { htmlAttributes = new { @class = "form-control", Value = DateTime.Now.ToString() } })
-                        @Html.ValidationMessageFor(model => model.Creat, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        創建日期:
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Creat, new { htmlAttributes = new { @class = "form-control", Value = DateTime.Now.ToString() } })
+                            @Html.ValidationMessageFor(model => model.Creat, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                @*<div class="form-group">
-            @Html.LabelFor(model => model.Logtime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Logtime, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Logtime, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
+                    @*<div class="form-group">
+                            @Html.LabelFor(model => model.Logtime, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Logtime, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Logtime, "", new { @class = "text-danger" })
+                            </div>
+                        </div>*@
 
-                <div class="form-group">
-                    備註:
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Note, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Note, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        備註:
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Note, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Note, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <input type="submit" value="送出" class="btn btn-success" />
-            </div>
+                    <input type="submit" value="送出" class="btn btn-success" />
+                </div>
             }
 
-            </div>
-                
-            </div>
-          
+        </div>
+
+    </div>
+
 </main>
